--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
 
+:root {
+  --color1: #f4d04e;
+  --color2: #111111;
+  --color3: #6b6b6b;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,8 +14,8 @@
 
 body {
   font-family: "Figtree", sans-serif;
-  background-color: #f4d04e;
-  color: #111111;
+  background-color: var(--color1);
+  color: var(--color2);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,22 +23,22 @@ body {
   height: 100vh;
   overflow: hidden;
   line-height: 150%;
-  font-size: clamp(12px, 4vw, 14px);
+  font-size: clamp(0.75rem, 4vw, 0.87rem);
 }
 
 .card-container {
   background-color: #fff;
-  border: 1px solid #111111;
+  border: 1px solid var(--color2);
   max-width: 384px;
   max-height: 522px;
-  padding: 24px;
+  padding: 1.5rem;
   border-radius: 20px;
   box-shadow: 8px 8px rgb(17, 17, 17);
 }
 
 .card-container img {
   border-radius: 10px;
-  margin-bottom: 24px;
+  margin-block-end: 24px;
 }
 
 section {
@@ -45,33 +51,33 @@ section span {
   align-self: flex-start;
   width: auto;
   font-weight: bold;
-  background-color: #f4d04e;
-  padding: 4px 12px;
+  background-color: var(--color1);
+  padding: 0.25rem 0.75rem;
   border-radius: 4px;
 }
 
 section h1 {
-  font-size: clamp(20px, 5vw, 24px);
+  font-size: clamp(1.25rem, 5vw, 1.5rem);
   cursor: pointer;
 }
 
 section h1:hover {
-  color: #f4d04e;
+  color: var(--color1);
 }
 
 section p {
-  font-size: clamp(14px, 3.2vw, 16px);
+  font-size: clamp(0.87rem, 3.2vw, 1rem);
 }
 
 .text {
-  color: #6b6b6b;
+  color: var(--color3);
 }
 
 .author {
   display: flex;
   align-items: center;
-  gap: 12px;
-  margin-top: 24px;
+  gap: 0.75rem;
+  margin-block-start: 1.5rem;
 }
 
 .author img {
@@ -90,7 +96,7 @@ footer {
 }
 
 .attribution {
-  font-size: 11px;
+  font-size: 0.68rem;
   text-align: center;
 }
 .attribution a {
