--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   --color1: #f4d04e;
   --color2: #111111;
   --color3: #6b6b6b;
+  --color4: #ffff;
 }
 
 * {
@@ -27,18 +28,18 @@ body {
 }
 
 .card-container {
-  background-color: #fff;
+  background-color: var(--color4);
   border: 1px solid var(--color2);
-  max-width: 384px;
-  max-height: 522px;
-  padding: 1.5rem;
+  max-width: 24rem;
+  max-height: 32.6rem;
+  padding: clamp(1.2rem, 5vw, 1.5rem);
   border-radius: 20px;
   box-shadow: 8px 8px rgb(17, 17, 17);
 }
 
 .card-container img {
   border-radius: 10px;
-  margin-block-end: 24px;
+  margin-block-end: 1.5rem;
 }
 
 section {
@@ -82,8 +83,8 @@ section p {
 
 .author img {
   margin: 0;
-  height: 32px;
-  width: 32px;
+  height: 2rem;
+  width: 2rem;
 }
 
 .author p {
@@ -92,7 +93,7 @@ section p {
 
 footer {
   position: absolute;
-  bottom: 30px;
+  bottom: 1.8rem;
 }
 
 .attribution {
