--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   --color2: #111111;
   --color3: #6b6b6b;
   --color4: #ffff;
+  --shadow-default: 8px 8px rgb(17, 17, 17);
 }
 
 * {
@@ -34,18 +35,18 @@ body {
   max-height: 32.6rem;
   padding: clamp(1.2rem, 5vw, 1.5rem);
   border-radius: 20px;
-  box-shadow: 8px 8px rgb(17, 17, 17);
+  box-shadow: var(--shadow-default);
 }
 
 .card-container img {
   border-radius: 10px;
-  margin-block-end: 1.5rem;
+  margin-block-end: clamp(1.2rem, 4vw, 1.5rem);
 }
 
 section {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 0.75rem;
 }
 
 section span {
@@ -78,7 +79,7 @@ section p {
   display: flex;
   align-items: center;
   gap: 0.75rem;
-  margin-block-start: 1.5rem;
+  margin-block-start: clamp(1.2rem, 4vw, 1.5rem);
 }
 
 .author img {
